--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ayano",
   "main": "main.js",
-  "author": "ZerioDev",
+  "author": "Eilaluth",
   "version": "1.0.0",
   "repository": "https://github.com/Eilaluth/Ayano.git",
   "description": "LYGC+ Official Discord Bot, Sugiura Ayano.",
