--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "imgbb-uploader": "^1.3.3",
     "is-image-url": "^1.1.8",
     "is-valid-http-url": "^1.0.3",
-    "kasu.nhentaiapi.js": "^3.0.1",
     "mal-scraper": "^2.11.3",
     "moment": "^2.29.1",
     "ms": "^3.0.0-canary.1",
     "opusscript": "^0.0.8",
     "sagiri": "^3.1.1",
+    "simple-nhentai": "^1.0.5",
     "valorant-fetch": "^3.1.1",
     "weather-js": "^2.0.0",
     "weky": "^3.1.8"
