--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "discord-gamecord": "^2.0.0",
     "discord-player": "^5.1.0",
     "discord.js": "^13.1.0",
-    "fbvideos": "^1.0.2",
     "ffmpeg-static": "^4.4.0",
-    "fxc7-tiktok": "^1.0.2",
     "get-youtube-id": "^1.0.1",
     "imgbb-uploader": "^1.3.3",
     "is-image-url": "^1.1.8",
@@ -27,6 +25,7 @@
     "opusscript": "^0.0.8",
     "sagiri": "^3.1.1",
     "simple-nhentai": "^1.0.5",
+    "tiktok-scraper": "^1.4.36",
     "valorant-fetch": "^3.1.1",
     "weather-js": "^2.0.0",
     "weky": "^3.1.8"
