--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sagiri": "^3.1.1",
     "simple-nhentai": "^1.0.5",
     "tiktok-scraper": "^1.4.36",
+    "twitter-url-direct": "^1.0.1",
     "valorant-fetch": "^3.1.1",
     "weather-js": "^2.0.0",
     "weky": "^3.1.8"
